update versions and build